Fix size limit for stretchy elements (#2043)
Fixes issue where if name is too long buttons are
pushed off screen

Fixed width for auto-saving text; allows calculations
to be made based on the longest element with
All changes saved...

[stage-2]

--- a/web/scss/sections/template-editor-layout.scss
+++ b/web/scss/sections/template-editor-layout.scss
@@ -446,6 +446,11 @@ $short-phone-height: 570px;
   overflow: hidden;
   white-space: nowrap;
 
+  #autoSavingDesktop {
+    display: inline-block;
+    width: 117px;
+  }
+
   last-modified {
     .text-muted {
       color: $madero-black;      
